# Apex

./: .gitignore  ARCHITECTURE.md  Apex.txt  CONTRIBUTING.md  Makefile  README.md
agent/: EVASION_VERIFICATION.md  Makefile  agent_posix.c  bof.h  crypto.h  evasion.h  evasion_macos.h  gen_shellcode.c  keylogger.h  main.c  obfstr.h  pic_loader.c  screenshot.h  syscall.h  token.h
bofs/: bof_api.h
bofs/recon/: whoami_bof.c
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: commands.rs  lib.rs  main.rs
client/src/hooks/: usePolling.ts  useSSE.ts
client/src/pages/: AgentBuilderPage.tsx  AgentsPage.tsx  (+11 more)
deployments/: apex-teamserver.service  docker-compose.yml
profiles/: default.yaml  google.yaml  microsoft-graph.yaml  slack.yaml
proto/: agents.proto  auth.proto  common.proto  listeners.proto  tasks.proto
release/: README.md  config.yaml  setup.sh
release/agent/: Makefile  agent.manifest  agent.rc  bof.h  evasion.h  evasion_linux.h  main.c  pic_loader.c  portscan.h  syscall.h  token.h
release/bofs/: bof_api.h
release/migrations/: 001_initial.sql
release/profiles/: amazon.yaml  cloudflare.yaml  default.yaml  github.yaml  microsoft.yaml
scripts/: build-client-release.sh  env.sh  generate-proto.sh  start.sh
teamserver/: config.example.yaml  config.yaml  go.mod  go.sum
teamserver/docs/: swagger.yaml
tools/: shellcode_loader.c
(+71 files in other folders)
