[package]
name = "apex-client"
version = "0.1.0"
description = "Apex C2 Framework - Operator Client"
authors = ["Apex Team"]
edition = "2021"

[lib]
name = "apex_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls", "dangerous-settings"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
